# rust-gpt

./: .env.example  Cargo.toml
src/: main.rs
